# markitdown

./: pyproject.toml
src/markitdown/: __init__.py
